--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
       DB_USER: root
       DB_PASSWORD: root
       DB_NAME: test_db
+      SECRET_KEY: super-secret-key-for-ci
 
     steps:
     - uses: actions/checkout@v4
