--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,10 @@ jobs:
       with:
         python-version: '3.11'
 
+    - name: Crear .env.dev para CI
+      run: |
+        echo "SECRET_KEY=super-secret-key-for-ci" > .env.dev
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
