actualizar .env de ejemplo

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,21 @@
-SECRET_KEY=
-DEBUG=
-ALLOWED_HOSTS=
-DB_ENGINE=
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
+# Clave secreta de Django (obligatoria)
+SECRET_KEY=ejemplo_secret_key
+
+# Modo debug (True/False)
+DEBUG=False
+
+# Hosts permitidos (separados por coma)
+ALLOWED_HOSTS=localhost,127.0.0.1
+
+# Configuración de base de datos
+DB_ENGINE=django.db.backends.mysql
+DB_NAME=db_ejemplo
+DB_USER=usuario_ejemplo
+DB_PASSWORD=contraseña_ejemplo
+DB_HOST=127.0.0.1
+DB_PORT=3306
+
+# Cloudinary para almacenamiento de archivos y estáticos
+CLOUDINARY_CLOUD_NAME=tu_cloud_name
+CLOUDINARY_API_KEY=tu_api_key
+CLOUDINARY_API_SECRET=tu_api_secret
